--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 </header>
 <div class="fullpage">
     <div class="body"></div>
+    <div class="backdrop"></div>
     <div class="loader"></div>
     <div class="glasses"><i class="fas fa-glasses"></i></div>
     <section class="main">
@@ -55,7 +56,7 @@
         <div id="contact" class="container container--column text--big alignment__vertical--center hide">
             <h1>Contact</h1>
             <span class="description"> And informations</span>
-            <a href="/contact.html">
+            <a href="about.html">
                 <button class="cta">&#129138</button>
             </a>
         </div>
